--- a/package.json
+++ b/package.json
@@ -6,12 +6,37 @@
   "repository": "https://github.com/nblthree/manga-scanlation.git",
   "author": "nblthree",
   "license": "MIT",
+  "scripts": {
+    "lint:prettier": "prettier --check --ignore-path .gitignore .",
+    "lint:js": "eslint --cache --ignore-path .gitignore \"**/*.{js,ts,tsx}\"",
+    "lint:ts-next": "tsc",
+    "lint:ts-node": "tsc --project ./tsconfig.node.json",
+    "lint": "npm-run-all lint:* -s",
+    "format-all": "prettier --write --ignore-path .gitignore .",
+    "format:prettier": "pretty-quick",
+    "format:js": "eslint --cache --ignore-path .gitignore --fix \"**/*.{js,ts,tsx}\"",
+    "format": "npm-run-all format:* -s",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^10.2.4",
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
     "next": "^10.0.7",
     "postcss": "^8.2.6",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.2.2"
   }
 }
