--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-hotkeys-hook": "^3.1.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
     "typescript": "^4.2.2"
   }
 }
