--- a/package.json
+++ b/package.json
@@ -21,28 +21,29 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "autoprefixer": "^10.2.4",
-    "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.22.0",
-    "next": "^10.0.7",
-    "postcss": "^8.2.6",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "react": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0",
+    "next": "^11.0.1",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-hotkeys-hook": "^3.1.0",
-    "tailwindcss": "^2.0.3"
+    "react-hotkeys-hook": "^3.3.2",
+    "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-color": "^3.0.4",
-    "typescript": "^4.2.2"
+    "@types/node": "^16.3.3",
+    "@types/react": "^17.0.14",
+    "@types/react-color": "^3.0.5",
+    "typescript": "^4.3.5",
+    "yarn-upgrade-all": "^0.5.4"
   }
 }
